# rustree

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml
docs/source/: spelling_wordlist.txt
rustree/: __init__.py  _rs.pyi  accessor.py  accessors.py  dataclasses.py  functools.py  ops.py  pytree.py  registry.py  treespec.py  typing.py  utils.py
rustree/integrations/: __init__.py  attrs.py  jax.py  numpy.py  torch.py
src/: lib.rs  pytypes.rs  registry.rs  treespec.rs
src/rustree/: mod.rs  pytypes.rs  registry.rs
src/rustree/treespec/: flatten.rs  mod.rs  treespec.rs
tests/: helpers.py  test_accessors.py  test_dataclasses.py  test_functools.py  test_ops.py  test_prefix_errors.py  test_registry.py  test_shortcut.py  test_treespec.py  test_typing.py  test_utils.py
tests/concurrent/: test_subinterpreters.py  test_threading.py
tests/integrations/: test_attrs.py  test_imports.py  test_jax.py  test_numpy.py  test_torch.py
