[package]
name = "rustree"
version = "0.0.1"
authors = ["Xuehai Pan <XuehaiPan@pku.edu.cn>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustree"
path = "src/lib.rs"
build = "build.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
once_cell = "*"

[build-dependencies]
pyo3-build-config = { version = "0.24", features = ["resolve-config"] }
