# Package ######################################################################

[build-system]
requires = ["maturin ~= 1.9"]
build-backend = "maturin"

[project]
name = "rustree"
description = "Optimized PyTree Utilities written in Rust."
readme = "README.md"
requires-python = ">= 3.9"
authors = [
    { name = "RusTree Contributors" },
    { name = "Xuehai Pan", email = "XuehaiPan@pku.edu.cn" },
]
license = "Apache-2.0"
keywords = [
    "PyTree",
    "Tree Manipulation",
    "Tree Traversal",
    "Functional Programming",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
]
dependencies = ["typing-extensions >= 4.5.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/XuehaiPan/rustree"
Repository = "https://github.com/XuehaiPan/rustree"
Documentation = "https://rustree.readthedocs.io"
"Bug Report" = "https://github.com/XuehaiPan/rustree/issues"

[tool.maturin]
python-source = "."
python-packages = ["rustree"]
module-name = "rustree._rs"
include = [
    "/pyproject.toml",
    "/rustree/**/*.py",
    "/rustree/**/*.pyi",
    "/rustree/**/py.typed",
]
bindings = 'pyo3'
features = ["pyo3/extension-module"]
auditwheel = "repair"
strip = true

# Linter tools #################################################################

[tool.mypy]
python_version = "3.9"
exclude = ['^tests/.*\.py$']
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
no_site_packages = true

[tool.pylint]
main.py-version = "3.9"
main.extension-pkg-allow-list = ["rustree._rs"]
main.ignore-paths = ["^_rs/$", "^tests/$"]
basic.good-names = []
design.max-args = 7
format.max-line-length = 120
"messages control".disable = [
    "duplicate-code",
    "consider-using-from-import",
    "unpacking-non-sequence",
    "unsubscriptable-object",
]
"messages control".enable = ["c-extension-no-member"]
spelling.spelling-dict = "en_US"
spelling.spelling-private-dict-file = "docs/source/spelling_wordlist.txt"
typecheck.generated-members = ["numpy.*", "torch.*"]

[tool.doc8]
max-line-length = 500

[tool.codespell]
ignore-words = "docs/source/spelling_wordlist.txt"

[tool.ruff]
target-version = "py39"
line-length = 100
output-format = "full"
src = ["rustree", "tests"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "C90",     # mccabe
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
    "S",       # flake8-bandit
    "BLE",     # flake8-blind-except
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "LOG",     # flake8-logging
    "INP",     # flake8-no-pep420
    "PIE",     # flake8-pie
    "PYI",     # flake8-pyi
    "PT",      # flake8-pytest-style
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "SLOT",    # flake8-slots
    "TID",     # flake8-tidy-imports
    "TC",      # flake8-type-checking
    "NPY",     # numpy
    "PERF",    # perflint
    "FURB",    # refurb
    "TRY",     # tryceratops
    "RUF",     # ruff
]
ignore = [
    # E501: line too long
    # W505: doc line too long
    # too long docstring due to long example blocks
    "E501",
    "W505",
    # ANN401: dynamically typed expressions (typing.Any) are disallowed
    "ANN401",
    # S101: use of `assert` detected
    # internal use and may never raise at runtime
    "S101",
    # TRY003: avoid specifying long messages outside the exception class
    # long messages are necessary for clarity
    "TRY003",
    # RUF022: `__all__` is not ordered according to an "isort-style" sort
    # `__all__` contains comments to group names
    "RUF022",
]
typing-modules = ["rustree.typing"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # unused-import
]
"setup.py" = [
    "D",       # pydocstyle
]
"tests/**/*.py" = [
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
    "S",       # flake8-bandit
    "SIM",     # flake8-simplify
    "INP001",  # flake8-no-pep420
]
"docs/source/conf.py" = [
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
    "INP001",  # flake8-no-pep420
]
".github/workflows/**/*.py" = [
    "D",       # pydocstyle
]

[tool.ruff.lint.isort]
known-first-party = ["rustree"]
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
verbosity_assertions = 3
filterwarnings = ["always", "error"]
